# Chip8-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  TechnicalDetails.md  chip8.cpp  chip8.h  main.cpp  platform.cpp  readme.md
.github/workflows/: build.yml
